# home-leds

./: Cargo.toml  flake.nix  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: firmware.yml  rust_ci.yml
control/: Cargo.toml
control/src/: main.rs
firmware/: Cargo.toml  build.rs  cfg.toml  rust-toolchain.toml
firmware/.cargo/: config.toml
firmware/src/: main.rs  ws2812_driver.rs
src/: main.rs  ws2812_driver.rs
