[package]
name = "home-leds"
version = "0.1.0"
authors = ["Sam Lakerveld <dark@dark.red>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp32c3-hal = { version = "0.13.0", features = [ "embassy", "async", "rt", "embassy-time-timg0", "log"] }
esp-hal-common = { version = "0.13.1", features = [ "embassy-executor-thread" ] }
esp-backtrace = { version = "0.9.0", features = [ "esp32c3", "panic-handler", "exception-handler", "print-uart" ] }
esp-println = { version = "0.7.1", features = ["esp32c3", "log"] }
esp-alloc = { version = "0.3.0" }
esp-wifi = { git = "https://github.com/esp-rs/esp-wifi", rev = "0db7a70", features = [
    "esp32c3",
    "async",
    "embedded-svc",
    "embassy-net",
    "wifi",
] }
embedded-svc = { version = "0.26.4", default-features = false, features = [ "log" ] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.0"
embassy-sync = "0.4.0"
embassy-time = { version = "0.1.3", features = ["nightly"] }
embassy-executor = { version = "=0.3.2", features = [ "nightly", "log", "executor-thread", "integrated-timers" , "arch-riscv32"] }
embassy-net = { version = "0.2.1", features = [
    "nightly",
    "tcp",
    "udp",
    "dhcpv4",
    "medium-ethernet",
] }
futures-util = { version = "0.3.29", default-features = false }
log = { version = "0.4.20" }
smart-leds = "0.3.0"

# [patch.crates-io]
# embassy-sync     = { git = "https://github.com/embassy-rs/embassy/", rev = "ff3baf1" }
# embassy-time     = { git = "https://github.com/embassy-rs/embassy/", rev = "ff3baf1" }
# embassy-executor = { git = "https://github.com/embassy-rs/embassy/", rev = "ff3baf1" }
# embassy-net      = { git = "https://github.com/embassy-rs/embassy/", rev = "ff3baf1" }


# atomic-waker     = { version = "1.1.2", features = ["portable-atomic"] }
# portable-atomic  = { version = "1.5.1", features = ["fallback", "critical-section"] }
# embassy-executor = { version = "0.3.3", features = ["log", "arch-riscv32", "nightly"] }
# embassy-time     = "0.1.5"
# embedded-io      = "0.6.1"
# embedded-svc     = { version = "0.26.4", default-features = false, features = [] }
# esp-alloc        = { version = "0.3.0" }
# esp-backtrace    = { version = "0.9.0", features = ["esp32c3", "panic-handler", "exception-handler", "print-uart"] }
# esp-println      = { version = "0.7.1", features = ["esp32c3", "log"] }
# esp-wifi         = { git = "https://github.com/esp-rs/esp-wifi/", rev = "0db7a70", features = ["esp32c3", "wifi"] }
# esp32c3-hal      = { version = "0.13.0" }
# # heapless         = { version = "0.8.0", default-features = false }
# log              = { version = "0.4.20" }
# smart-leds       = "0.3.0"

# [dependencies.embassy-net]
# version = "0.2.1"
# features = [
#     "medium-ethernet",
#     "proto-ipv4", "dhcpv4", "tcp",
#     "defmt",
# ]

# [dependencies.smoltcp]
# version = "0.10.0"
# default-features = false
# features = [
#     "proto-igmp", "proto-ipv4",
#     "socket-tcp", "socket-icmp", "socket-udp",
#     "medium-ethernet",
#     "proto-dhcpv4",
#     "socket-raw", "socket-dhcpv4"
# ]

[profile.dev]
opt-level = 1
overflow-checks = false

[profile.dev.package.esp-wifi]
opt-level = 3
