[package]
name = "home-leds"
version = "0.1.0"
authors = ["Sam Lakerveld <dark@dark.red>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp32c3-hal = { version = "0.14.0", features = [ "embassy", "async", "rt", "embassy-time-timg0", "log"] }
esp-hal-common = { version = "0.14.1", features = [ "embassy-executor-thread" , "esp-riscv-rt", "esp32c3"] }
esp-backtrace = { version = "0.9.0", features = [ "esp32c3", "panic-handler", "exception-handler", "print-uart" ] }
esp-println = { version = "0.7.1", features = ["esp32c3", "log"] }
esp-alloc = { version = "0.3.0" }
esp-wifi = { git = "https://github.com/esp-rs/esp-wifi", rev = "a69545dc", features = [
    "esp32c3",
    "async",
    "embassy-net",
    "wifi",
    "coex",
] }
embedded-svc = { version = "0.26.4", default-features = false, features = [ "log" ] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embassy-sync = "0.5.0"
embassy-time = { version = "0.2.0" }
embassy-executor = { version = "=0.4.0", features = [ "log", "integrated-timers" , "arch-riscv32", "task-arena-size-40960"] }
embassy-net = { version = "0.2.1", features = [
    "udp", "igmp",
    "dhcpv4",
    "medium-ethernet",
] }
critical-section = "1.1.2"
futures-util = { version = "0.3.30", default-features = false }
log = { version = "0.4.20" }
smart-leds = "0.3.0"
dnsparse = "0.3.0"
num-traits = { version = "0.2.17", default-features = false, features = ["libm"] }

[patch.crates-io]
embassy-net = { git = "https://github.com/embassy-rs/embassy.git", package = "embassy-net", rev = "14f41a71"}
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", package = "embassy-time", rev = "14f41a71"}
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", package = "embassy-executor", rev = "14f41a71"}
embassy-executor-macros = { git = "https://github.com/embassy-rs/embassy.git", package = "embassy-executor-macros", rev = "14f41a71"}
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", package = "embassy-sync", rev = "14f41a71"}
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", package = "embassy-futures", rev = "14f41a71"}

# atomic-waker     = { version = "1.1.2", features = ["portable-atomic"] }
# portable-atomic  = { version = "1.5.1", features = ["fallback", "critical-section"] }
# embassy-executor = { version = "0.3.3", features = ["log", "arch-riscv32", "nightly"] }
# embassy-time     = "0.1.5"
# embedded-io      = "0.6.1"
# embedded-svc     = { version = "0.26.4", default-features = false, features = [] }
# esp-alloc        = { version = "0.3.0" }
# esp-backtrace    = { version = "0.9.0", features = ["esp32c3", "panic-handler", "exception-handler", "print-uart"] }
# esp-println      = { version = "0.7.1", features = ["esp32c3", "log"] }
# esp-wifi         = { git = "https://github.com/esp-rs/esp-wifi/", rev = "0db7a70", features = ["esp32c3", "wifi"] }
# esp32c3-hal      = { version = "0.13.0" }
# # heapless         = { version = "0.8.0", default-features = false }
# log              = { version = "0.4.20" }
# smart-leds       = "0.3.0"

# [dependencies.embassy-net]
# version = "0.2.1"
# features = [
#     "medium-ethernet",
#     "proto-ipv4", "dhcpv4", "tcp",
#     "defmt",
# ]

# [dependencies.smoltcp]
# version = "0.10.0"
# default-features = false
# features = [
#     "proto-igmp", "proto-ipv4",
#     "socket-tcp", "socket-icmp", "socket-udp",
#     "medium-ethernet",
#     "proto-dhcpv4",
#     "socket-raw", "socket-dhcpv4"
# ]

[profile.dev]
opt-level = 2
# overflow-checks = false

[profile.dev.package."*"]
opt-level = 3
overflow-checks = false
